--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "miles-consulting",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.1"
-  }
+    "bootstrap": "^5.3.2"
+  },
+  "description": ""
 }
